# personal

./: .env.template  .gitattributes  .gitignore  README.md  USAGE.md  asc.py  career-template.adoc  career.html  create_asciidoc.py  debug_screenshot.js  index.html  process_content.py  profile.json  profile.yml  pyproject.toml  pytest.ini  requirements-full.txt  requirements.txt  sitemap-0.xml  sitemap-index.xml  style.css  template.md  test.adoc
.claude/: settings.local.json
automation/: README.md  __init__.py  digital_garden_classifier.py  digital_garden_processor.py  fact_checker.py  git_automation.py  integrated_pipeline.py  requirements-test.txt  requirements.txt  run_automation.py  visual_enhancer.py
claudedocs/: API_SETUP_GUIDE.md  CACHE_CLEAR_INSTRUCTIONS.md  DAILY_OPERATIONS_GUIDE.md  ENHANCEMENT_PLAN.md  FRAMEWORK_DECISION.md  IMAGEN4_IMPLEMENTATION_QUESTIONS.md  IMAGE_GENERATION_ALTERNATIVES.md  IMPLEMENTATION_RECOMMENDATION.md  IMPLEMENTATION_STATUS.md  PROJECT_OVERVIEW.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_SPEC_REVIEW.md  TEST_REPORT.md  component_design_specification.md  homepage_architecture_design.md  implementation_workflow.md  project_analysis_report.md  requirements_specification.md
data/: career_strategy.yml  profile.yml  schema.yml
digital-garden/: astro.config.mjs  package-lock.json  package.json  test-card-links.js  tsconfig.json
digital-garden-backup/: package.json  tailwind.config.mjs
home-assistant/: CLAUDE.md  README.md  automations.yaml  helpers.yaml
input/: IMAGES_README.md  TODO_FOR_USER.md  sample-diary.txt  sample-idea.txt  (+1 more)
(+84 files in other folders)
